--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </div>
         </div>
         
-        <footer><a href="https://github.com/1uum/"></a></footer>
+        <footer>
+            <a href="https://github.com/1uum/"><img src="img/github-colored-seeklogo.com.svg" alt="" width="80" height="80"></a>
+        </footer>
 
         <script src="js/script.js"></script>
     </body>
